# sqlite-hypergraph

./: .gitmodules  .replit  AGENTS.md  README.md  example.py  flake.nix  justfile  pyproject.toml  replit.nix
src/hypergraph_db/: __init__.py  database.py  models.py  utils.py
src/hypergraph_db/sql/: __init__.py  delete_hyperedge.sql  delete_node.sql  insert_embedding.sql  insert_hyperedge.sql  insert_node.sql  insert_node_hyperedge_map.sql  schema.sql  search_embeddings.sql  search_hyperedges.sql  search_nodes_by_hyperedge.sql  search_nodes_by_properties.sql  traverse_hypergraph.sql  update_hyperedge.sql  update_node.sql
src/hypergraph_db/wasm/: Cmakelists.txt  Makefile  Readme.md  database.c  index.ts
tests/: test_database.py  test_models.py
