[tool.poetry]
name = "hypergraph_db"
version = "0.1.0"
description = "A Python API for a temporal directed hypergraph SQLite database with text embeddings"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hypergraph_db", from = "src"}]
[tool.poetry.dependencies]
python = "^3.10"
sqlite-utils = "^3.28.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
black = "^23.1.0"
sqlparse = "^0.4.4"
mkdocs-techdocs-core = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
mypy = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"