[project]
name = "hypergraph_db"
version = "0.1.0"
description = "A Python API for a temporal directed hypergraph SQLite database with text embeddings"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlite-utils>=3.28.0",
    "pandas>=2.1.0",
    "numpy>=2.1.2",
    "black>=23.1.0",
    "sqlparse>=0.4.4",
    "mkdocs-techdocs-core>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "mypy>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypergraph_db"]
